# python-ml-experiments

./: .gitignore  LICENSE
data/: AAPL_2023-01-01_2024-01-01.pickle  AMZN_2023-01-01_2024-01-01.pickle  MSFT_2023-01-01_2024-01-01.pickle  MSTR_2023-01-01_2024-01-01.pickle  stockanalysis.html
models/: autoencoder-2dim.keras  autoencoder-mnist.keras  cifar10_ResNet20v1_model.143.keras  classifier-autoencoder-mnist.keras  classifier-decoder-mnist.keras  classifier-encoder-mnist.keras  cnn-functional-99.3.keras  cnn-y-network-99.3.keras  decoder-2dim.keras  decoder-mnist.keras  denoising-autoencoder-mnist.keras  denoising-decoder-mnist.keras  denoising-encoder-mnist.keras  encoder-2dim.keras  encoder-mnist.keras  mnist_cnn-80k-99.1.keras  mnist_cnn-80k-99.4.keras  mnist_lstm (1).keras  mnist_lstm.keras  rcnn.keras  rnn-mnist-97.8.keras  test_model0.keras  test_model1.keras
numerai/: hello_numerai.ipynb
py/: HMMLayer.py  SVDLayer.py  app.py  bayes.py  data.py  entropy_regularizer.py  gcp.py  gmm.py  hirbert.py  hmm_layer.py  lnn.py  losses.py  lstm.py  rcnn.py  requirements.txt  svd_layer.py  tmp.py
py/mykeras/callbacks/: jaccard_score.py  lrlogger.py
py/mykeras/constraints/: uniquenonzero.py
py/mykeras/datasets/: cifar10.py  fred.py  markets.py  mnist.py  yf.py
py/mykeras/layers/: attn.py  dynamicoutput.py  ekf.py  gcp.py  hmm.py  (+6 more)
pyi/: mnist-vae.ipynb  vid.ipynb
rs/app/: Cargo.toml
rs/app/examples/: pickle.rs
rs/app/src/: data.rs  main.rs
rs/app/src/glm/: mod.rs
rs/app/src/trading/: mod.rs  policy.rs  recommendation.rs  ts.rs
rs/app/src/vi/: mod.rs
(+27 files in other folders)
